third_party/move/move-compiler-v2/tests/checking/typing/v1-commands/pop_weird.exp

Diagnostics:
error: expected 0 item(s), found 2
   ┌─ tests/checking/typing/v1-commands/pop_weird.move:13:9
   │
13 │         (_, _) = ();
   │         ^^^^^^

error: expected 0 item(s), found 1
   ┌─ tests/checking/typing/v1-commands/pop_weird.move:14:9
   │
14 │         (_) = ();
   │         ^^^
